<?xml version="1.0" encoding="utf-8"?>    
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical">
    		<TextView
    		    style="@style/manualHeader"
    		    android:text="@string/credits"/>
    		
		    <TextView
		        style="@style/manualHeader"
		        android:text="@string/man_pcHeader"/>
		    <TextView
		        style="@style/manualText"
		        android:text="@string/man_pcHelp"/>
		    
		    <TextView
		        style="@style/manualHeader"
		        android:text="@string/man_encHeader"/>
		    <TextView
		        style="@style/manualText"
		        android:text="@string/man_encHelp"/>
		    
		    <TextView
		        style="@style/manualHeader"
		        android:text="@string/man_catalogHeader"/>
		    <TextView
		        style="@style/manualText"
		        android:text="@string/man_catalogHelp"/>
		    
		    <TextView
		        style="@style/manualHeader"
		        android:text="@string/man_initHeader"/>
		    <TextView
		        style="@style/manualText"
		        android:text="@string/man_initHelp"/>
		</LinearLayout>
</ScrollView>