<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="61dp">
	    
	    <TextView
	        android:id="@+id/initItemName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="5dp"
	        android:text="@string/testText" />
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp">

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/initItemInit" />

	        <TextView
	            android:id="@+id/initValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/testText" />

	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp">

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/initItemHP" />

	        <TextView
	            android:id="@+id/initHPCurrent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/testText"/>
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/initItemHPDivide"/>
	        <TextView
	            android:id="@+id/initHPMax"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/testText"/>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentBottom="true"
	        android:layout_marginBottom="5dp"
	        android:layout_marginLeft="5dp">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/initItemAC"/>
	        <TextView
	            android:id="@+id/initItemAC"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/testText"/>
	    </LinearLayout>
	</RelativeLayout>
	<!-- 
	<LinearLayout
	    android:id="@+id/conditionsLayout"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp">
	    <TextView
	        android:id="@+id/initItemConditions"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testText"/>
	</LinearLayout> -->
</LinearLayout>