<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/roundsTextLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp"
	        android:text="@string/rounds"/>
	    
	    <TextView
	        android:id="@+id/roundsText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp"/>
	</LinearLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
	    <ListView
	        android:id="@android:id/list"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_above="@+id/prevNextLayout"/>
	    
	    <LinearLayout
	        android:id="@+id/prevNextLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_alignParentBottom="true">
	        <Button
	            android:id="@+id/prevButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/prevInit"/>
	        
	        <Button
	            android:id="@+id/nextButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/nextInit"/>
	    </LinearLayout>
	</RelativeLayout>
</LinearLayout>